--- a/src/app/pages/src-catalogue/user-src-catalogue/edit/user-src-catalogue-edit.component.html
+++ b/src/app/pages/src-catalogue/user-src-catalogue/edit/user-src-catalogue-edit.component.html
@@ -19,7 +19,7 @@
                     <div class="ayo-middle pt-24" fxLayout="column">
 
                         <mat-form-field fxFlex="100" class="is-light">
-                            <input matInput placeholder="Nama Vendor" type="text" formControlName="name">
+                            <input matInput placeholder="Nama Pengguna" type="text" formControlName="name">
                             <mat-error
                                 *ngIf="formUserCatalogue.controls['name'].hasError('required') && formUserCatalogue.controls['name'].touched ">
                                 Nama harus diisi.
