Adjusment stock check IR - split question n answer

--- a/src/app/pages/dte/task-verification/dialog/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/pages/dte/task-verification/dialog/confirm-dialog/confirm-dialog.component.html
@@ -163,16 +163,38 @@
               <img src="{{item.planogram_image}}" class="planogram-template-img" (click)="previewImage(item.planogram_image)">
               <span class="planogram-template-caption">Template Planogram</span>
             </div>
-            <img src="{{item.answer_image}}" class="answer-img" (click)="previewImage(item.answer_image)"/>
+            <div class="item-question-img" fxLayout="column" fxLayoutAlign="center center">
+              <img src="{{item.answer_image}}" class="answer-img" (click)="previewImage(item.answer_image)"/>
+              <span class="planogram-template-caption">Bukti Foto</span>
+            </div>
           </div>
 
           <div class="item-question-img" *ngIf="item.type == 'stock_check_ir'" fxLayout="column" fxLayoutAlign="start start">
-            <div *ngFor="let item of item.stock_check_ir_list" class="mb-16 item-question-img" fxLayout="column">
-              <div class="p-8" fxLayout="column" fxLayoutAlign="start start">
-                <div>Product: {{item.PRODUCT_NAME}}</div>
-                <div>Stok: {{item.QUANTITY}}</div>
+            <div class="mb-16 mt-8 item-question-img">
+              <div class="responsive">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th nowrap>Product Name</th>
+                      <th nowrap>Qty</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let item of item.stock_check_ir_list">
+                      <td nowrap>
+                        {{ item.PRODUCT_NAME }}
+                      </td>
+                      <td nowrap>
+                        {{ item.QUANTITY }}
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
-              <img src="{{item.IMAGE}}" class="answer-img" (click)="previewImage(item.IMAGE)"/>
+            </div>
+            <div class="item-question-img" fxLayout="column" fxLayoutAlign="center center">
+              <img src="{{item.answer_image}}" class="answer-img" (click)="previewImage(item.answer_image)"/>
+              <span class="planogram-template-caption">Bukti Foto</span>
             </div>
           </div>
 
