--- a/src/app/pages/popup-notification/edit/popup-notification-edit.component.html
+++ b/src/app/pages/popup-notification/edit/popup-notification-edit.component.html
@@ -143,21 +143,6 @@
           <!-- Consumer -->
           <div *ngIf="formPopupGroup.get('user_group').value === 'customer'">
 
-
-            <div class="px-24">
-              <div fxLayout="row">
-                <mat-form-field fxFlex="45" class="is-light form-primary">
-                  <mat-select formControlName="verification" placeholder="Jenis Konsumen">
-                    <mat-option *ngFor="let item of listJenisKonsumen" [value]="item.value">{{item.name}}</mat-option>
-                  </mat-select>
-                  <mat-error
-                    *ngIf="formPopupGroup.controls['verification'].hasError('required') && formPopupGroup.controls['verification'].touched">
-                    Jenis Konsumen harus diisi
-                  </mat-error>
-                </mat-form-field>
-              </div>
-            </div>
-
             <div class="px-24">
               <div fxLayout="row">
                 <mat-form-field fxFlex="45" class="is-light form-primary">
@@ -167,6 +152,20 @@
                   <mat-error
                     *ngIf="formPopupGroup.controls['is_smoker'].hasError('required') && formPopupGroup.controls['is_smoker'].touched">
                     Tipe Consumer harus diisi
+                  </mat-error>
+                </mat-form-field>
+              </div>
+            </div>
+
+            <div class="px-24" *ngIf="formPopupGroup.get('is_smoker').value !== 'yes'">
+              <div fxLayout="row">
+                <mat-form-field fxFlex="45" class="is-light form-primary">
+                  <mat-select formControlName="verification" placeholder="Jenis Konsumen">
+                    <mat-option *ngFor="let item of listJenisKonsumen" [value]="item.value">{{item.name}}</mat-option>
+                  </mat-select>
+                  <mat-error
+                    *ngIf="formPopupGroup.controls['verification'].hasError('required') && formPopupGroup.controls['verification'].touched">
+                    Jenis Konsumen harus diisi
                   </mat-error>
                 </mat-form-field>
               </div>
