--- a/src/app/pages/dte/template/edit/template-edit.component.scss
+++ b/src/app/pages/dte/template/edit/template-edit.component.scss
@@ -1,4 +1,27 @@
 :host {
+  table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+  }
+
+  th,
+  td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
+
+  tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+
+  .responsive {
+    overflow-x: auto;
+    max-height: 400px;
+    overflow-y: auto;
+    border: 1px solid #ddd;
+  }
   .direct-belanja:hover {
     cursor: pointer;
   }
