--- a/src/app/pages/dte/template/create/template-create.component.html
+++ b/src/app/pages/dte/template/create/template-create.component.html
@@ -85,7 +85,8 @@
 
           <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
             <mat-form-field fxFlex="50" class="is-light form-primary">
-              <mat-select formControlName="kategori_toolbox" placeholder="Pilih Kategori Toolbox" id="kategori_toolbox" #singleSelect>
+              <mat-select formControlName="kategori_toolbox" placeholder="Pilih Kategori Toolbox" id="kategori_toolbox"
+                #singleSelect>
                 <ngx-mat-select-search [formControl]="filterLKT" [placeholderLabel]="'Cari Kategori Toolbox...'"
                   [noEntriesFoundLabel]="'Tidak ada kategori toolbox yang ditemukan'"></ngx-mat-select-search>
                 <mat-option *ngFor="let item of filteredLKT | async" [value]="item.id">
@@ -117,7 +118,8 @@
 
           <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
             <mat-form-field fxFlex="50" class="is-light form-primary">
-              <mat-select formControlName="tingkat_kesulitan_misi" placeholder="Pilih Tingkat Kesulitan Misi" id="tingkat_kesulitan_misi" #singleSelect>
+              <mat-select formControlName="tingkat_kesulitan_misi" placeholder="Pilih Tingkat Kesulitan Misi"
+                id="tingkat_kesulitan_misi" #singleSelect>
                 <ngx-mat-select-search [formControl]="filterLTKM" [placeholderLabel]="'Cari Tingkat Kesulitan Misi...'"
                   [noEntriesFoundLabel]="'Tidak ada tingkat kesulitan misi yang ditemukan'"></ngx-mat-select-search>
                 <mat-option *ngFor="let item of filteredLTKM | async" [value]="item.id">
@@ -133,7 +135,8 @@
 
           <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
             <mat-form-field fxFlex="50" class="is-light form-primary">
-              <mat-select formControlName="kategori_misi" placeholder="Pilih Kategori Misi" id="kategori_misi" #singleSelect>
+              <mat-select formControlName="kategori_misi" placeholder="Pilih Kategori Misi" id="kategori_misi"
+                #singleSelect>
                 <ngx-mat-select-search [formControl]="filterLKM" [placeholderLabel]="'Cari Kategori Misi...'"
                   [noEntriesFoundLabel]="'Tidak ada kategori misi yang ditemukan'"></ngx-mat-select-search>
                 <mat-option *ngFor="let item of filteredLKM | async" [value]="item.id">
@@ -431,7 +434,7 @@
                 </ng-container>
               </div>
               <div fxLayout="row wrap" fxLayout.lt-md="column" class="pb-24" fxLayoutGap="20px" fxLayoutGap.lt-md="0px"
-                *ngIf="templateListImageIR[i]" style="margin-top: 25px;">
+                *ngIf="templateListImageIR[i]['ir_id']" style="margin-top: 25px;">
                 <div fxFlex="45" *ngIf="item.get('type').value !== 'stock_check_ir'">
                   <div class="banner-image-template-selected">
                     <div id="banner">
