dissable mass upload

--- a/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
+++ b/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
@@ -214,7 +214,7 @@
             </mat-form-field>
           </div>
 
-          <div fxLayout="column wrap" fxLayout.lt-md="column" fxLayoutGap.lt-md="0px"
+          <!-- <div fxLayout="column wrap" fxLayout.lt-md="column" fxLayoutGap.lt-md="0px"
             fxLayoutAlign="space-between stretch" *ngIf="seeAksesKasir">
             <mat-form-field fxFlex="100" class="is-light form-primary">
               <mat-select placeholder="Akses Kasir" formControlName="cashier">
@@ -225,7 +225,7 @@
                 Akses Kasir harus diisi
               </mat-error>
             </mat-form-field>
-          </div>
+          </div> -->
 
           <div [formGroup]="formBankAccount" *ngIf="seeRekening">
             <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
