Fix Import Export Panel Partnership

--- a/src/app/pages/user-management/private-label/panel-partnership/create/panel-partnership-create.component.html
+++ b/src/app/pages/user-management/private-label/panel-partnership/create/panel-partnership-create.component.html
@@ -295,9 +295,8 @@
             [footerHeight]="56"
             [rowHeight]="'auto'"
             [reorderable]="reorderable"
-            [selectionType]="
-              createForm.get('type').value !== 'pick-all' ? 'checkbox' : ''
-            "
+            [selectionType]="'checkbox'"
+            [selected] = "selected"
             [count]="pagination.total"
             [limit]="pagination.per_page"
             [externalPaging]="true"
