--- a/src/app/pages/user-management/private-label/panel-partnership/edit/panel-partnership-edit.component.html
+++ b/src/app/pages/user-management/private-label/panel-partnership/edit/panel-partnership-edit.component.html
@@ -290,7 +290,7 @@
               [footerHeight]="56"
               [rowHeight]="'auto'"
               [reorderable]="reorderable"
-              [selectionType]="createForm.get('type').value !== 'pick-all' ? 'checkbox' : ''"
+              [selectionType]="'checkbox'"
               [selected]="selected"
               [count]="pagination.total"
               [limit]="pagination.per_page"
