--- a/src/app/pages/settings/force-update-apps/force-update-apps.component.html
+++ b/src/app/pages/settings/force-update-apps/force-update-apps.component.html
@@ -6,7 +6,8 @@
   <!-- / HEADER -->
   <div class="content p-24" *ngIf="!onLoad">
     <div fxLayout="row wrap" fxLayoutAlign="start start" fxLayout.gt-md="row">
-      <form [formGroup]="formForceUpdate" autocomplete="off" class="mat-elevation-z4 mr-24 mb-24 p-24" fxLayout="column" fxLayoutAlign="start" fxFlex="65%">
+      <form [formGroup]="formForceUpdate" autocomplete="off" class="mat-elevation-z4 mr-24 mb-24 p-24" fxLayout="column"
+        fxLayoutAlign="start" fxFlex="65%">
         <div fxLayout="row" class="pb-16" fxLayoutAlign="start center">
           <h2 class="">Pemberitahuan Pembaruan Aplikasi</h2>
         </div>
@@ -17,7 +18,8 @@
               <mat-select placeholder="Aplikasi" formControlName="appsName">
                 <mat-option *ngFor="let item of listApps" [value]="item.value">{{item.name}}</mat-option>
               </mat-select>
-              <mat-error *ngIf="formForceUpdate.controls['appsName'].hasError('required') && formForceUpdate.controls['appsName'].touched">
+              <mat-error
+                *ngIf="formForceUpdate.controls['appsName'].hasError('required') && formForceUpdate.controls['appsName'].touched">
                 Nama Aplikasi harus diisi
               </mat-error>
             </mat-form-field>
@@ -27,7 +29,8 @@
               <mat-select placeholder="Operasi Sistem" formControlName="os">
                 <mat-option *ngFor="let item of listOs" [value]="item.value">{{item.name}}</mat-option>
               </mat-select>
-              <mat-error *ngIf="formForceUpdate.controls['os'].hasError('required') && formForceUpdate.controls['os'].touched">
+              <mat-error
+                *ngIf="formForceUpdate.controls['os'].hasError('required') && formForceUpdate.controls['os'].touched">
                 Operasi Sistem harus diisi
               </mat-error>
             </mat-form-field>
@@ -35,18 +38,22 @@
           <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
             <mat-form-field fxFlex="100" class="is-light form-primary">
               <input matInput type="text" formControlName="version" placeholder="Versi Aplikasi" decimalNumber>
-              <mat-error *ngIf="formForceUpdate.controls['version'].hasError('required') && formForceUpdate.controls['version'].touched">
+              <mat-error
+                *ngIf="formForceUpdate.controls['version'].hasError('required') && formForceUpdate.controls['version'].touched">
                 Versi Aplikasi harus diisi
               </mat-error>
-              <mat-error *ngIf="formForceUpdate.controls['version'].hasError('min') && formForceUpdate.controls['version'].touched">
-                Versi Aplikasi {{formForceUpdate.controls['appsName'].value}} tidak boleh kurang dari versi aplikasi {{formForceUpdate.controls['appsName'].value}} yang terakhir
+              <mat-error
+                *ngIf="formForceUpdate.controls['version'].hasError('min') && formForceUpdate.controls['version'].touched">
+                Versi Aplikasi {{formForceUpdate.controls['appsName'].value}} tidak boleh kurang dari versi aplikasi
+                {{formForceUpdate.controls['appsName'].value}} yang terakhir
               </mat-error>
             </mat-form-field>
           </div>
           <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
             <mat-form-field fxFlex="100" class="is-light form-primary">
               <input matInput type="text" formControlName="title" placeholder="Isi Pesan">
-              <mat-error *ngIf="formForceUpdate.controls['title'].hasError('required') && formForceUpdate.controls['title'].touched">
+              <mat-error
+                *ngIf="formForceUpdate.controls['title'].hasError('required') && formForceUpdate.controls['title'].touched">
                 Isi Pesan harus diisi
               </mat-error>
             </mat-form-field>
@@ -65,10 +72,12 @@
             </mat-radio-group>
           </div>
 
-          <div fxLayout="row wrap" fxLayoutAlign="start center" *ngIf="formForceUpdate.controls['notifNewVersion'].value === 'yes'" fxFlex="1 0 auto">
+          <div fxLayout="row wrap" fxLayoutAlign="start center"
+            *ngIf="formForceUpdate.controls['notifNewVersion'].value === 'yes'" fxFlex="1 0 auto">
             <mat-form-field fxFlex="100" class="is-light form-primary">
               <input matInput type="text" formControlName="notifMessage" placeholder="Isi Pesan Notifikasi">
-              <mat-error *ngIf="formForceUpdate.controls['notifMessage'].hasError('required') && formForceUpdate.controls['notifMessage'].touched">
+              <mat-error
+                *ngIf="formForceUpdate.controls['notifMessage'].hasError('required') && formForceUpdate.controls['notifMessage'].touched">
                 Isi Pesan Notifikasi harus diisi
               </mat-error>
             </mat-form-field>
@@ -91,7 +100,7 @@
           <div class="pb-16">
             <div class="pt-16" fxLayout="row" fxLayoutAlign="start center">
               <h3 class="">
-                  <strong>Force Update</strong>
+                <strong>Force Update</strong>
               </h3>
             </div>
             <mat-radio-group formControlName="forceUpdate">
@@ -102,7 +111,8 @@
           </div>
         </div>
         <div class="confirm pt-8 pb-24" fxLayout="row" *ngIf="permission?.buat">
-          <button mat-raised-button type="password" type="button" class="confirmation-button" fxFlex="30" (click)="submit()">
+          <button mat-raised-button type="password" type="button" class="confirmation-button" fxFlex="30"
+            (click)="submit()">
             SIMPAN
           </button>
         </div>
@@ -118,7 +128,8 @@
               <div class="info" fxLayout="row" fxLayoutAlign="space-between center">
                 {{item.version}}
                 <!-- <mat-icon class="secondary-text" color="primary">delete_forever</mat-icon> -->
-                <button mat-icon-button color="primary" matTooltip="Hapus" (click)="revertVersion(item)" *ngIf="permission?.hapus">
+                <button mat-icon-button color="primary" matTooltip="Hapus" (click)="revertVersion(item)"
+                  *ngIf="permission?.hapus">
                   <mat-icon>delete_forever</mat-icon>
                 </button>
               </div>
@@ -139,7 +150,8 @@
               <small class="secondary-text">Versi Aplikasi</small>
               <div class="info" fxLayout="row" fxLayoutAlign="space-between center">
                 {{item.version}}
-                <button mat-icon-button color="primary" matTooltip="Hapus" (click)="revertVersion(item)" *ngIf="permission?.hapus">
+                <button mat-icon-button color="primary" matTooltip="Hapus" (click)="revertVersion(item)"
+                  *ngIf="permission?.hapus">
                   <mat-icon>delete_forever</mat-icon>
                 </button>
               </div>
@@ -151,8 +163,29 @@
             </div>
           </div>
         </div>
+        <div class="ayo-main-wrapper mat-bg-white mt-24" fxFlex="1 0 auto">
+          <div fxLayout="row" class="py-16" fxLayoutAlign="start center">
+            <h2 class="">Versi Aplikasi Kasir Terakhir</h2>
+          </div>
+          <div class="profile-box info-box work" fxLayout="column" *ngFor="let item of listVersionCashier">
+            <div class="info-line pb-16">
+              <small class="secondary-text">Versi Aplikasi</small>
+              <div class="info" fxLayout="row" fxLayoutAlign="space-between center">
+                {{item.version}}
+                <button mat-icon-button color="primary" matTooltip="Hapus" (click)="revertVersion(item)"
+                  *ngIf="permission?.hapus">
+                  <mat-icon>delete_forever</mat-icon>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="profile-box info-box work" fxLayout="column" *ngIf="listVersionCashier.length === 0">
+            <div class="info-line pb-16">
+              <small class="secondary-text">Tidak ada data</small>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
-  
