--- a/src/app/pages/dte/task-verification/dialog/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/pages/dte/task-verification/dialog/confirm-dialog/confirm-dialog.component.html
@@ -198,6 +198,37 @@
             </div>
           </div>
 
+          <div class="item-question-img" *ngIf="dataSubmission.data.ir_verification !== null && dataSubmission.data.ir_verification.length > 0" >
+            <div class="item-question-img" *ngFor="let ir_item of dataSubmission.data.ir_verification; let i = index;">
+              <div class="mt-8 item-question-img" *ngIf="ir_item.id_pertanyaan === item.id" fxLayout="column" fxLayoutAlign="center center">
+                <div class="responsive">
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th nowrap>IR Check</th>
+                        <th nowrap>Compliance</th>
+                        <th nowrap>Status</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td nowrap>
+                          {{ ir_item.hasil_verifikasi.ir_verification }}
+                        </td>
+                        <td nowrap>
+                          {{ ir_item.hasil_verifikasi.planogram_compliance }}
+                        </td>
+                        <td nowrap>
+                          {{ ir_item.hasil_verifikasi.status }}
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
