mitra share link promotion 2

--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -414,6 +414,10 @@
                   </mat-list>
                 </div>
               </div>
+              <div fxFlexLayout="row" fxLayoutAlign="start center" fxLayout.lt-md="row" fxLayoutGap="20px"
+                fxLayoutGap.lt-md="10px" fxFlex="1 0 auto" style="margin-left: 20px;margin-bottom: 20px;">
+                <button type="button" mat-stroked-button color="primary" (click)="generateLink()">GENERATE LINK</button>
+              </div>
             </div>
           </mat-tab>
           <mat-tab label="Gambar Produk">
