--- a/src/app/pages/dte/audience/create/audience-create.component.html
+++ b/src/app/pages/dte/audience/create/audience-create.component.html
@@ -29,7 +29,7 @@
             </mat-form-field>
           </div>
 
-          <!-- <div fxLayout="row">
+          <div fxLayout="row">
             <label id="ts">Jenis Audience</label>
           </div>
 
@@ -43,7 +43,7 @@
                 {{ item.name }}
               </mat-radio-button>
             </mat-radio-group>
-          </div> -->
+          </div>
 
           <br>
           
