--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
@@ -15,7 +15,7 @@
               <div class='p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center" *ngIf="isDetail">
                 <div class="button-row">
                   <button mat-flat-button style="width: 160px" color="white" (click)="exportInvoice()">
-                    <mat-icon>vertical_align_bottom</mat-icon> Export Invoice
+                    <mat-icon>vertical_align_top</mat-icon> Export Invoice
                   </button>
                 </div>
                 <div class="button-row">
@@ -32,6 +32,7 @@
                     Nama Voucher harus diisi.
                   </mat-error>
                 </mat-form-field>
+
                 <div fxLayout="row" fxFlex="60" fxLayoutGap="20px">
                   <mat-form-field fxFlex="20" class="is-light">
                     <input matInput type="number" placeholder="Nilai Penukaran Untuk 1 Koin" formControlName="currency">
@@ -55,6 +56,7 @@
                     </mat-error>
                   </mat-form-field>
                 </div>
+
                 <div fxFlex="50" fxLayout="row wrap" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
                   <mat-form-field fxFlex="45%" class="is-light form-primary">
                     <input matInput (focus)="startPicker.open()" [matDatepicker]="startPicker"
@@ -78,6 +80,7 @@
                     </mat-error>
                   </mat-form-field>
                 </div>
+
                 <div fxFlex="50" fxLayout="row wrap" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
                   <mat-form-field fxFlex="45%" class="is-light form-primary">
                     <input matInput (focus)="voucherPicker.open()" [matDatepicker]="voucherPicker"
@@ -102,22 +105,31 @@
                     </mat-error>
                   </mat-form-field>
                 </div>
+
                 <mat-form-field fxFlex="50">
                   <mat-select placeholder="Group Trade Program" formControlName="group_trade_program" multiple>
                     <mat-option *ngFor="let gtp of groupTradePrograms" [value]="gtp.id">{{ gtp.name }}</mat-option>
                   </mat-select>
                 </mat-form-field>
-              </div>
-              <h4 style="font-weight: bold;margin-left: 40px;">Batasan</h4>
-              <div fxLayout="row wrap" fxLayoutGap="20px" class="top-table p-8" style="margin-left: 25px;">
-                <div fxFlex="50">
-                  <mat-checkbox formControlName="limit_by_product" (change)="isChecked('product', $event)"
-                    style="margin-right: 25px;">Batasi dengan Produk
-                  </mat-checkbox>
-                  <mat-checkbox formControlName="limit_by_category" (change)="isChecked('category', $event)">Batasi
-                    Dengan Kategori</mat-checkbox>
+
+                <mat-form-field fxFlex="50" class="isLight">
+                  <textarea matInput name="Catatan" formControlName="note" cdkTextareaAutosize
+                    #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="2" cdkAutosizeMaxRows="15"
+                    placeholder="Catatan"></textarea>
+                </mat-form-field>
+              
+                <div fxFlex="50" fxLayout="row wrap" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+                  <h4 style="font-weight: bold;" >Batasan</h4>
+                  <div fxFlex="100">
+                    <mat-checkbox formControlName="limit_by_product" (change)="isChecked('product', $event)"
+                      style="margin-right: 25px;">Batasi dengan Produk
+                    </mat-checkbox>
+                    <mat-checkbox formControlName="limit_by_category" (change)="isChecked('category', $event)">Batasi
+                      Dengan Kategori</mat-checkbox>
+                  </div>
                 </div>
-                <mat-form-field fxFlex="50" style="margin-top: 50px;">
+
+                <mat-form-field fxFlex="50" class="pt-24" *ngIf="formDetilVoucher.get('limit_by_product').value">
                   <mat-chip-list #chipList aria-label="Product List"
                     [disabled]="!formDetilVoucher.get('limit_by_product').value">
                     <mat-chip *ngFor="let product of productList" [selectable]="selectable" [removable]="removable"
@@ -130,23 +142,26 @@
                       [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
                       (matChipInputTokenEnd)="add($event)">
                   </mat-chip-list>
-                  <!-- <input matInput type="text" placeholder="Batasan Berdasarkan Produk"
-                    (input)="keyUpProduct.next($event.target.value)" [formControl]="product" [matAutocomplete]="auto"
-                    [disabled]="!formDetilVoucher.get('limit_by_product').value"> -->
-                  <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayProductName">
+                  <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayProductName" multiple>
                     <mat-option *ngFor="let item of filteredSkuOptions | async" [value]="item"
                       (onSelectionChange)="getProductObj($event, item)">
                       {{item.name}}
                     </mat-option>
                   </mat-autocomplete>
                 </mat-form-field>
+                <mat-form-field fxFlex="50" class="pt-24" *ngIf="!formDetilVoucher.get('limit_by_product').value">
+                  <input matInput type="text" placeholder="Batasan Berdasarkan Produk" [disabled]="true">
+                </mat-form-field>
+
                 <mat-form-field fxFlex="50">
                   <mat-select placeholder="Batasan Berdasarkan Kategori" formControlName="category"
                     [disabled]="!formDetilVoucher.get('limit_by_category').value">
                     <mat-option *ngFor="let cat of listCategories" [value]="cat.id">{{ cat.name }}</mat-option>
                   </mat-select>
                 </mat-form-field>
+                
               </div>
+
               <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center">
                 <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
                   (click)="onSaveDetail()">
@@ -304,14 +319,14 @@
               </ngx-datatable>
               <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="isDetail">
                 <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
-                  (click)="onSave()">
+                  (click)="onSavePanelRetailer()">
                   SIMPAN
                 </button>
               </div>
             </div>
           </div>
         </mat-tab>
-        <mat-tab label="Penukaran Voucher" *ngIf="isDetail">
+        <mat-tab label="Penukaran & Pembayaran" *ngIf="isDetail">
           <app-redeem-list></app-redeem-list>
         </mat-tab>
       </mat-tab-group>
