--- a/src/app/pages/b2-bvoucher/redeem-list/redeem-list.component.html
+++ b/src/app/pages/b2-bvoucher/redeem-list/redeem-list.component.html
@@ -1,7 +1,21 @@
 <div class="ayo-middle p-24" fxLayout="column">
-  <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
+  <!-- <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
     <h2 class="pl-8">Penukaran Voucher</h2>
+  </div> -->
+
+  <div class='p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center">
+    <div class="button-row">
+      <button mat-flat-button style="width: 160px" color="white" (click)="importRedeem()">
+        <mat-icon>vertical_align_bottom</mat-icon> Import XLS
+      </button>
+    </div>
+    <div class="button-row">
+      <button mat-flat-button style="width: 160px" color="white" (click)="exportRedeem()">
+        <mat-icon>vertical_align_top</mat-icon> Export XLS
+      </button>
+    </div>
   </div>
+
   <!-- <h4 style="text-align: center;">Page Under Construction!</h4> -->
   <div fxLayout="column">
     <form [formGroup]="formFilter" autoComplete="off">
@@ -115,6 +129,14 @@
 
     <ngx-datatable-column name="Invoice Penukaran" prop="available_at">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.invoice}}</ng-template>
+    </ngx-datatable-column>
+    
+    <ngx-datatable-column name="Order ID Pembayaran" prop="order_id">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.order_id}}</ng-template>
+    </ngx-datatable-column>
+
+    <ngx-datatable-column name="Tanggal" prop="payment_date">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.payment_date | date: 'dd-MM-yyyy'}}</ng-template>
     </ngx-datatable-column>
 
   </ngx-datatable>
