--- a/src/app/pages/user-management/private-label/supplier-company/create/supplier-company-create.component.html
+++ b/src/app/pages/user-management/private-label/supplier-company/create/supplier-company-create.component.html
@@ -25,7 +25,7 @@
               </mat-error>
             </mat-form-field>
           </div>
-          <!--<div fxLayout="row">
+          <div *ngIf="this.router.url == '/user-management/private-label/create'" fxLayout="row">
             <mat-form-field fxFlex="100" fxFlex.gt-sm="50" class="is-light form-primary">
               <mat-chip-list #chipList aria-label="Keyword Selection">
                 <mat-chip *ngFor="let product of products" [selectable]="productSelectable"
@@ -50,7 +50,7 @@
                   Digital Care untuk pertanyaan ini.</span>
               </mat-option>
             </mat-autocomplete>
-          </div>-->
+          </div>
           <div fxLayout="column" class="mb-8">
             <label class="field-label" *ngIf="createForm.controls['alamat'].value">Alamat</label>
             <div fxLayout="row" >
