--- a/src/app/pages/user-management/private-label/supplier-company/index/supplier-company-index.component.html
+++ b/src/app/pages/user-management/private-label/supplier-company/index/supplier-company-index.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <page-content-header [contentTitle]="'Perusahaan'">
-    <button style="width: 170px" [routerLink]="['/user-management', 'supplier-company','create']" mat-raised-button type="button">
+    <button style="width: 170px" (click)="directCreate()" mat-raised-button type="button">
       <mat-icon>add</mat-icon> TAMBAH
     </button>
   </page-content-header>
