--- a/src/app/pages/user-management/private-label/supplier-company/edit/supplier-company-edit.component.html
+++ b/src/app/pages/user-management/private-label/supplier-company/edit/supplier-company-edit.component.html
@@ -30,7 +30,7 @@
               </mat-error>
             </mat-form-field>
           </div>
-          <div *ngIf="this.router.url.indexOf('/user-management/private-label') > -1" fxLayout="row">
+          <div *ngIf="isFromPrivateLabel();" fxLayout="row">
             <mat-form-field fxFlex="100" fxFlex.gt-sm="50" class="is-light form-primary">
               <mat-chip-list #chipList aria-label="Keyword Selection">
                 <mat-chip *ngFor="let product of products" [selectable]="productSelectable"
