--- a/src/app/pages/dte/audience/create/audience-create.component.html
+++ b/src/app/pages/dte/audience/create/audience-create.component.html
@@ -207,7 +207,7 @@
           </div>
         </form>
       </div>
-      <div
+      <!-- <div
         fxLayout="row wrap"
         fxLayoutAlign="end stretch"
         fxLayout.lt-md="column"
@@ -225,7 +225,7 @@
         >
           Load Data
         </button>
-      </div>
+      </div> -->
       <form [formGroup]="formFilter" autoComplete="off">
         <div
           fxLayout="row wrap"
@@ -463,13 +463,13 @@
           [resizeable]="false"
           [headerCheckboxable]="true"
         >
-          <ng-template ngx-datatable-header-template >
+          <!-- <ng-template ngx-datatable-header-template >
             <mat-checkbox 
               [checked]="allRowsSelected" 
               (change)="selectFn(!allRowsSelected);"
             >
             </mat-checkbox>
-          </ng-template>
+          </ng-template> -->
 
           <ng-template
             ngx-datatable-cell-template
@@ -484,12 +484,12 @@
               *ngIf="!allRowsSelected"
             >
             </mat-checkbox>
-            <mat-checkbox 
+            <!-- <mat-checkbox 
               [checked]="true" 
               [disabled]="allRowsSelected || formAudience.get('limit').value === 'pick-all'" 
               *ngIf="allRowsSelected" class="mat-checkbox-all"
             >
-            </mat-checkbox>
+            </mat-checkbox> -->
           </ng-template>
         </ngx-datatable-column>
         <ngx-datatable-column name="Penjual" prop="name"></ngx-datatable-column>
