--- a/src/@fuse/components/navigation/navigation.component.scss
+++ b/src/@fuse/components/navigation/navigation.component.scss
@@ -10,3 +10,24 @@ fuse-navigation {
         width: 100%;
     }
 }
+:host {
+
+    .folded:not(.unfolded) & {
+
+        .nav-link {
+
+            > .nav-link-title,
+            > .nav-link-badge {
+                opacity: 0;
+                transition: opacity 200ms ease;
+            }
+        }
+    }
+
+    .nav-link {
+        > .nav-link-badge{
+            background-color: #fff;
+            color: #000;
+        }
+    }
+}
