--- a/src/app/pages/user-management/wholesaler/index/wholesaler-index.component.html
+++ b/src/app/pages/user-management/wholesaler/index/wholesaler-index.component.html
@@ -34,19 +34,19 @@
       </div>
       <form [formGroup]="formFilter" autoComplete="off">
         <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
+          <mat-form-field fxFlex="10.5%" class="is-light form-primary">
             <mat-select placeholder="National" formControlName="national">
               <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
             </mat-select>
           </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
+          <mat-form-field fxFlex="10.5%" class="is-light form-primary">
             <mat-select placeholder="Zone" formControlName="zone" multiple>
               <mat-option *ngFor="let item of filteringGeotree(list['zone'])" [value]="item.id">{{item.name === 'all' ? 'Semua
                 Zona' :
                 item.code}}</mat-option>
             </mat-select>
           </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
+          <mat-form-field fxFlex="10.5%" class="is-light form-primary">
             <mat-select placeholder="Regional" formControlName="region" multiple>
               <mat-option *ngFor="let item of filteringGeotree(list['region'])" [value]="item.id">{{item.name === 'all' ? 'Semua
                 Regional'
@@ -54,7 +54,7 @@
                 item.code}}</mat-option>
             </mat-select>
           </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
+          <mat-form-field fxFlex="10.5%" class="is-light form-primary">
             <mat-select placeholder="Area" formControlName="area" multiple>
               <mat-option *ngFor="let item of filteringGeotree(list['area'])" [value]="item.id">{{item.name === 'all' ? 'Semua
                 Area'
@@ -62,7 +62,7 @@
                 item.code}}</mat-option>
             </mat-select>
           </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
+          <mat-form-field fxFlex="10.5%" class="is-light form-primary">
             <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
               <mat-option *ngFor="let item of filteringGeotree(list['salespoint'])" [value]="item.id">{{item.name === 'all' ?
                 'Semua
@@ -71,7 +71,7 @@
                 item.code}}</mat-option>
             </mat-select>
           </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
+          <mat-form-field fxFlex="10.5%" class="is-light form-primary">
             <mat-select placeholder="District" formControlName="district" multiple>
               <mat-option *ngFor="let item of filteringGeotree(list['district'])" [value]="item.id">{{item.name === 'all' ? 'Semua
                 District'
@@ -79,10 +79,18 @@
                 item.code}}</mat-option>
             </mat-select>
           </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
+          <mat-form-field fxFlex="10.5%" class="is-light form-primary">
             <mat-select placeholder="Territory" formControlName="territory" multiple>
               <mat-option *ngFor="let item of filteringGeotree(list['territory'])" [value]="item.id">{{item.name === 'all' ? 'Semua
                 Territori'
+                :
+                item.code}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="10.5%" class="is-light form-primary">
+            <mat-select placeholder="GWS" formControlName="gws" multiple>
+              <mat-option *ngFor="let item of filteringGeotree(list['gws'])" [value]="item.id">{{item.name === 'all' ? 'Semua
+                GWS'
                 :
                 item.code}}</mat-option>
             </mat-select>
@@ -119,6 +127,8 @@
         </ngx-datatable-column>
 
         <ngx-datatable-column name="Kode WS" prop="code" summary-template="activeCell"></ngx-datatable-column>
+        
+        <ngx-datatable-column name="GWS" prop="gws"></ngx-datatable-column>
 
         <ngx-datatable-column [width]="120" name="Status" prop="status">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
