--- a/src/@fuse/components/navigation/navigation.component.html
+++ b/src/@fuse/components/navigation/navigation.component.html
@@ -26,12 +26,12 @@
             </a>
         </div>
 
-        <div class="nav-item">
+        <!-- <div class="nav-item">
             <a class="nav-link" id="onetrust-pc-btn-handler"
                 routerLinkActive="active" matRipple>
                 <span class="nav-link-title">Pengaturan Kuki</span>
             </a>
-        </div>
+        </div> -->
         
 
     </ng-container>
