--- a/src/app/main/toolbar/toolbar.component.html
+++ b/src/app/main/toolbar/toolbar.component.html
@@ -52,6 +52,11 @@
           <span>Profil Saya</span>
         </button>
 
+        <button mat-menu-item id="onetrust-pc-btn-handler" tabIndex="0">
+          <span>Pengaturan Kuki</span>
+          <mat-icon class="arrow-right">keyboard_arrow_right</mat-icon>
+        </button>
+
         <button mat-menu-item (click)="logout()">
           <mat-icon>exit_to_app</mat-icon>
           <span>Keluar</span>
