--- a/src/app/pages/user-management/retailer/index/retailer-index.component.html
+++ b/src/app/pages/user-management/retailer/index/retailer-index.component.html
@@ -117,6 +117,12 @@
           </mat-form-field>
 
           <mat-form-field fxFlex="16" class="is-light form-primary">
+            <mat-select placeholder="Classification" [formControl]="classification">
+              <mat-option *ngFor="let item of listIC" [value]="item.value">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field fxFlex="16" class="is-light form-primary">
             <mat-select placeholder="Chatbot" [formControl]="chatbot">
               <mat-option *ngFor="let item of listStatusChatBot" [value]="item.value">{{item.name}}</mat-option>
             </mat-select>
