--- a/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
+++ b/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
@@ -208,6 +208,11 @@
                 Territori harus diisi
               </mat-error>
             </mat-form-field>
+            <mat-form-field fxFlex="31%" class="is-light form-primary">
+              <mat-select placeholder="GSW" formControlName="gsw">
+                <mat-option *ngFor="let item of listGsw" [value]="item.value">{{item.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
           </div>
 
           <div fxLayout="row" *ngIf="seeTokoCabang">
