--- a/src/app/main/toolbar/toolbar.component.html
+++ b/src/app/main/toolbar/toolbar.component.html
@@ -52,9 +52,9 @@
           <span>Profil Saya</span>
         </button>
 
-        <button mat-menu-item id="onetrust-pc-btn-handler" tabIndex="0">
+        <button mat-menu-item id="onetrust-pc-btn-handler">
+          <mat-icon>storage</mat-icon>
           <span>Pengaturan Kuki</span>
-          <mat-icon class="arrow-right">keyboard_arrow_right</mat-icon>
         </button>
 
         <button mat-menu-item (click)="logout()">
