--- a/src/app/main/toolbar/toolbar.component.html
+++ b/src/app/main/toolbar/toolbar.component.html
@@ -52,10 +52,10 @@
           <span>Profil Saya</span>
         </button>
 
-        <button mat-menu-item id="onetrust-pc-btn-handler">
+        <!-- <button mat-menu-item id="onetrust-pc-btn-handler">
           <mat-icon>storage</mat-icon>
           <span>Pengaturan Kuki</span>
-        </button>
+        </button> -->
 
         <button mat-menu-item (click)="logout()">
           <mat-icon>exit_to_app</mat-icon>
