adjusment IR - hasil verifikasi stock check IR

--- a/src/app/pages/dte/task-verification/dialog/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/pages/dte/task-verification/dialog/confirm-dialog/confirm-dialog.component.html
@@ -232,10 +232,10 @@
                     <tbody *ngFor="let hvscir_item of ir_item.hasil_verifikasi">
                       <tr>
                         <td nowrap>
-                          {{ hvscir_item.brand }}
+                          {{ hvscir_item.Brand }}
                         </td>
                         <td nowrap>
-                          {{ hvscir_item.quantity }}
+                          {{ hvscir_item.Quantity }}
                         </td>
                       </tr>
                     </tbody>
