--- a/src/app/pages/device-authentication/device-authentication.component.html
+++ b/src/app/pages/device-authentication/device-authentication.component.html
@@ -7,7 +7,7 @@
     <div class="lgn-box">
       <div class="top">
         <!-- <img [src]="environment?.image" [srcset]="environment?.image_2x" /> -->
-        <div class="big-title">Kamu Mengakses dari perangkat lain</div>
+        <div class="big-title">Verifikasi Akun</div>
         <div>Masukan 6 Digit Kode Verifikasi yang dikirim melalui {{username}}</div>
         <div class="time-descrption-authentication">Sisa Waktu Penggunaan Kode Verifikasi</div>
         <div>({{value | timeRemaining}})</div>
